fixed arrow cropping

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ image {
 #arrow_container {
     position: relative;
     height: 25%;
+    bottom: 5%;
 }
 
 .arrow {
